# easy-modbus

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: client.rs  rtu_client.rs  series_client.rs  server.rs
src/: lib.rs  main.rs
src/codec/: decoder.rs  encoder.rs  mod.rs
src/frame/: mod.rs  request.rs  response.rs
src/util/: crc.rs  crc_util.rs  mod.rs
